[gd_scene load_steps=30 format=3 uid="uid://bmmy5ed73ll18"]

[ext_resource type="AudioStream" uid="uid://www70tgnyoa4" path="res://Assets/sounds/steps/leaves01.ogg" id="1_0qai3"]
[ext_resource type="Script" uid="uid://cdqy3i0lepo7q" path="res://GDScripts/steps_sounds.gd" id="1_tfmxv"]
[ext_resource type="AudioStream" uid="uid://bcql7m5kb68fy" path="res://Assets/sounds/steps/leaves02.ogg" id="2_i81jb"]
[ext_resource type="AudioStream" uid="uid://df5oywncvy7of" path="res://Assets/sounds/steps/stone01.ogg" id="4_4vi8y"]
[ext_resource type="AudioStream" uid="uid://blj2qoy8i8b22" path="res://Assets/sounds/steps/metal_steps_01.ogg" id="5_tsiie"]
[ext_resource type="AudioStream" uid="uid://b5eulyc8jbi14" path="res://Assets/sounds/steps/metal_steps_02.ogg" id="6_fqtfe"]
[ext_resource type="AudioStream" uid="uid://d1w44kk8etdi1" path="res://Assets/sounds/steps/metal_steps_03.ogg" id="7_pg8pq"]
[ext_resource type="AudioStream" uid="uid://c7gl0jkynsfsm" path="res://Assets/sounds/steps/metal_steps_04.ogg" id="8_kpdh7"]
[ext_resource type="AudioStream" uid="uid://b0d7x1bo36wn8" path="res://Assets/sounds/steps/metal_steps_05.ogg" id="9_011uk"]
[ext_resource type="AudioStream" uid="uid://dmix0xxn855x3" path="res://Assets/sounds/steps/metal_steps_06.ogg" id="10_mtfil"]
[ext_resource type="AudioStream" uid="uid://cjhu7mcrs0ecv" path="res://Assets/sounds/steps/metal_steps_07.ogg" id="11_g1qyp"]
[ext_resource type="AudioStream" uid="uid://chk040lrm3k1q" path="res://Assets/sounds/steps/metal_steps_08.ogg" id="12_lfver"]
[ext_resource type="AudioStream" uid="uid://ctm3skhb8qthp" path="res://Assets/sounds/steps/metal_steps_09.ogg" id="13_gt28i"]
[ext_resource type="AudioStream" uid="uid://k8w7j033mwil" path="res://Assets/sounds/steps/metal_steps_10.ogg" id="14_u4hxj"]
[ext_resource type="AudioStream" uid="uid://bklx1sbi1td3g" path="res://Assets/sounds/steps/metal_steps_11.ogg" id="15_hg1pk"]
[ext_resource type="AudioStream" uid="uid://mnxusdje2rc5" path="res://Assets/sounds/steps/metal_steps_12.ogg" id="16_lvko8"]
[ext_resource type="AudioStream" uid="uid://32qpnhadhngt" path="res://Assets/sounds/steps/metal_steps_13.ogg" id="17_7msp6"]
[ext_resource type="AudioStream" uid="uid://wqf5bggoac2i" path="res://Assets/sounds/steps/metal_steps_14.ogg" id="18_y5l1m"]
[ext_resource type="AudioStream" uid="uid://bydnvabj0lsce" path="res://Assets/sounds/steps/metal_steps_15.ogg" id="19_laqr2"]
[ext_resource type="AudioStream" uid="uid://daa2n3x5vec73" path="res://Assets/sounds/steps/metal_steps_16.ogg" id="20_5ux6e"]
[ext_resource type="AudioStream" uid="uid://ce7g0l8ohfngc" path="res://Assets/sounds/steps/metal_steps_17.ogg" id="21_i6t8g"]
[ext_resource type="AudioStream" uid="uid://ch4xlgq0b3p2t" path="res://Assets/sounds/steps/metal_steps_18.ogg" id="22_35c5g"]
[ext_resource type="AudioStream" uid="uid://duc4vlkq5pnfq" path="res://Assets/sounds/steps/metal_steps_19.ogg" id="23_7pxyy"]
[ext_resource type="AudioStream" uid="uid://bl6qw8cstvby6" path="res://Assets/sounds/steps/metal_steps_20.ogg" id="24_olpjt"]
[ext_resource type="AudioStream" uid="uid://dj15o8udivyrq" path="res://Assets/sounds/steps/metal_steps_21.ogg" id="25_mgbmo"]
[ext_resource type="AudioStream" uid="uid://dt110ckwtss88" path="res://Assets/sounds/steps/metal_steps_22.ogg" id="26_xyxof"]
[ext_resource type="AudioStream" uid="uid://tygtap2kwkqn" path="res://Assets/sounds/steps/metal_steps_23.ogg" id="27_dwfor"]
[ext_resource type="AudioStream" uid="uid://dlfrb3ea6gqd8" path="res://Assets/sounds/steps/metal_steps_24.ogg" id="28_7kbsn"]
[ext_resource type="AudioStream" uid="uid://b17xb0i31w4mb" path="res://Assets/sounds/steps/metal_steps_25.ogg" id="29_hn0eo"]

[node name="StepsSounds" type="Node3D"]
script = ExtResource("1_tfmxv")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Leaves01" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("1_0qai3")
unit_size = 5.0
max_distance = 20.0
bus = &"SFX"

[node name="Leaves02" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_i81jb")
unit_size = 5.0
max_distance = 20.0
bus = &"SFX"

[node name="Stone01" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_4vi8y")
unit_size = 5.0
max_db = -12.0
max_distance = 20.0
bus = &"SFX"

[node name="metal_steps_01" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_tsiie")
unit_size = 5.0
max_db = -12.0
max_distance = 20.0
bus = &"SFX"

[node name="metal_steps_02" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6_fqtfe")
unit_size = 5.0
max_db = -12.0
max_distance = 20.0
bus = &"SFX"

[node name="metal_steps_03" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("7_pg8pq")
unit_size = 5.0
max_db = -12.0
max_distance = 20.0
bus = &"SFX"

[node name="metal_steps_04" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("8_kpdh7")
unit_size = 5.0
max_db = -12.0
max_distance = 20.0
bus = &"SFX"

[node name="metal_steps_05" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("9_011uk")
unit_size = 5.0
max_db = -12.0
max_distance = 20.0
bus = &"SFX"

[node name="metal_steps_06" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("10_mtfil")
unit_size = 5.0
max_db = -12.0
max_distance = 20.0
bus = &"SFX"

[node name="metal_steps_07" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("11_g1qyp")
unit_size = 5.0
max_db = -12.0
max_distance = 20.0
bus = &"SFX"

[node name="metal_steps_08" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("12_lfver")
unit_size = 5.0
max_db = -12.0
max_distance = 20.0
bus = &"SFX"

[node name="metal_steps_09" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("13_gt28i")
unit_size = 5.0
max_db = -12.0
max_distance = 20.0
bus = &"SFX"

[node name="metal_steps_10" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("14_u4hxj")
unit_size = 5.0
max_db = -12.0
max_distance = 20.0
bus = &"SFX"

[node name="metal_steps_11" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("15_hg1pk")
unit_size = 5.0
max_db = -12.0
max_distance = 20.0
bus = &"SFX"

[node name="metal_steps_12" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("16_lvko8")
unit_size = 5.0
max_db = -12.0
max_distance = 20.0
bus = &"SFX"

[node name="metal_steps_13" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("17_7msp6")
unit_size = 5.0
max_db = -12.0
max_distance = 20.0
bus = &"SFX"

[node name="metal_steps_14" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("18_y5l1m")
unit_size = 5.0
max_db = -12.0
max_distance = 20.0
bus = &"SFX"

[node name="metal_steps_15" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("19_laqr2")
unit_size = 5.0
max_db = -12.0
max_distance = 20.0
bus = &"SFX"

[node name="metal_steps_16" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("20_5ux6e")
unit_size = 5.0
max_db = -12.0
max_distance = 20.0
bus = &"SFX"

[node name="metal_steps_17" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("21_i6t8g")
unit_size = 5.0
max_db = -12.0
max_distance = 20.0
bus = &"SFX"

[node name="metal_steps_18" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("22_35c5g")
unit_size = 5.0
max_db = -12.0
max_distance = 20.0
bus = &"SFX"

[node name="metal_steps_19" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("23_7pxyy")
unit_size = 5.0
max_db = -12.0
max_distance = 20.0
bus = &"SFX"

[node name="metal_steps_20" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("24_olpjt")
unit_size = 5.0
max_db = -12.0
max_distance = 20.0
bus = &"SFX"

[node name="metal_steps_21" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("25_mgbmo")
unit_size = 5.0
max_db = -12.0
max_distance = 20.0
bus = &"SFX"

[node name="metal_steps_22" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("26_xyxof")
unit_size = 5.0
max_db = -12.0
max_distance = 20.0
bus = &"SFX"

[node name="metal_steps_23" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("27_dwfor")
unit_size = 5.0
max_db = -12.0
max_distance = 20.0
bus = &"SFX"

[node name="metal_steps_24" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("28_7kbsn")
unit_size = 5.0
max_db = -12.0
max_distance = 20.0
bus = &"SFX"

[node name="metal_steps_25" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("29_hn0eo")
unit_size = 5.0
max_db = -12.0
max_distance = 20.0
bus = &"SFX"
